# terminal_chat

./: .gitignore  README.md  client.py  pyproject.toml  server.py  term_func.py
.vim/: coc-settings.json
