[tool.poetry]
name = "terminal_chat"
version = "0.1.0"
description = "Simple terminal chat app."
authors = ["Anthony Suárez <neolight1010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
blessings = "^1.7"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
